@@ -30,7 +30,3 @@
         }
     }
 }
-
-button[aria-label=Close] {
-    display: none !important;
-}
