@@ -4,6 +4,11 @@
 
 - v1.0.1011                                 -
 ---------------------------------------------
+- 2020-06-13                                -
+---------------------------------------------
+.: WSM: Task: Adding component displayed preview (WSM-77)
+
+---------------------------------------------
 - 2020-06-11                                -
 ---------------------------------------------
 .: WSM: Task: Unpublish page to not show to public (WSM-118)
